html and css improvements on homepage, header, and footer

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -22,6 +22,13 @@ $text-grey: #929292;
 $grey-white: #f6f6f6;
 $dark-grey: #535353;
 
+$closeoutbike-bg: #455560;
+$mobilizeart-bg: #75c6b2;
+$gigdog-bg: #164d67;
+$scheduleshare-bg: #2c2c2c;
+$textus-bg: #922b8d;
+
+
 @mixin pt-sans {
   font-family: 'PT Sans', sans-serif;
 }
