--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 #header-content.row
 
-	#logo
-		%a{:href => root_path}
+	.column
+		= link_to image_tag("logo.png"), root_path
 
 	%nav
 		%ul#main-nav
