--- a/app/views/layouts/_together.html.haml
+++ b/app/views/layouts/_together.html.haml
@@ -1,5 +1,5 @@
 %article#together
-  #heroes.row
+  .row
     .column.eight
       %h3 We are a distributed team of superheroes.
     #work-together.column.four
