--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -149,24 +149,34 @@
   }
 }
 
-.gray {
-  border-color: #B5BBBF;
-  color: #B5BBBF;
-}
-
-.teal {
-  border-color: #E9F6F3;
-  color: #E9F6F3;
-}
-
 .blanco {
   border-color: #FFFFFF;
   color: #FFFFFF;
 }
 
-.light-blue {
+.closeoutbike {
+  border-color: #B5BBBF;
+  color: #B5BBBF;
+}
+
+.mobilizeart {
+  border-color: #E9F6F3;
+  color: #E9F6F3;
+}
+
+.gigdog {
   border-color: #8EA3AD;
   color: #8EA3AD;
+}
+
+.scheduleshare {
+  border-color: #858585;
+  color: #858585;
+}
+
+.textus {
+  border-color: #CB8AC8;
+  color: #CB8AC8;
 }
 
 .blue {
@@ -177,16 +187,6 @@
 .green {
   border-color: #F1F6E9;
   color: #F1F6E9;
-}
-
-.black {
-  border-color: #858585;
-  color: #858585;
-}
-
-.purple {
-  border-color: #CB8AC8;
-  color: #CB8AC8;
 }
 
 .a-button {
