--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -6,27 +6,45 @@ footer {
   background: #16171a;
   padding: 50px 0px 60px;
   color: #818181;
+
+  h3, h4, h5, a {
+  font-family: "Merriweather Sans", sans-serif;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  line-height: 1.1;
+  }
+
+  h3 {
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #707070;
+  }
+
+  h4 {
+    font-size: 11px;
+    font-weight: normal;
+    text-transform: none;
+    color: #B8B8B8;
+  }
+
+  h5 {
+    font-size: 11px;  
+    font-weight: bold;
+    text-transform: none;
+    color: #B8B8B8;
+  }
 }
 
 #footer-with-map {
+  margin-top: -370px;
   margin-bottom: 550px;
-}
-
-footer h4 {
-  font-size: 14px;
-  line-height: 24px;
-  text-transform: uppercase;
-  color: white;
-  margin-bottom: 25px;
 }
 
 #together {
   background: $grey-white;
-  height: 165px;
-}
 
-#heroes {
   padding-top: 50px; 
+  padding-bottom: 30px;
 
   h3 {
     color: #535353;
@@ -35,33 +53,25 @@ footer h4 {
   }
 }
 
-#heart-icon {
-  background: image-url("heart.png") no-repeat;
-  display: block;
-  height: 80px;
-  width: 30px;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 #work-together {
   float: left;
  }
 
 #site-links {
-  height: 370px;
-  position: relative;
-  z-index: 1;
-  width: 100%;
-  background-color: #FFFFFF;
 
   h1 {
     margin-top: 80px;
   }
-  section {
-    margin-left: 10%;
-    width: 80%;
+
+  h2 {
+    margin-bottom: 35px;
+  }
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 43px;
   }
 } 
 
@@ -74,105 +84,37 @@ footer h4 {
   width: 130px;
 }
 
-#logo-grey a {
-  background: image-url("logo_grey.png") no-repeat;
-  width: 75px;
-  height: 75px;
-  float: left;  
-}
-
 #location {
   width: 235px;
   float: left;
-
-  h3 {
-    font-size: 12px;
-    font-family: "Merriweather Sans", sans-serif;
-    text-transform: uppercase;
-    color: #707070;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    line-height: 1.1;
-  }
-
-  h4 {
-    font-size: 11px;
-    font-family: "Merriweather Sans", sans-serif;
-    font-weight: normal;
-    text-transform: none;
-    color: #B8B8B8;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    line-height: 1.1;
-  }
-
-  h5 {
-    font-size: 11px;  
-    font-family: "Merriweather Sans", sans-serif;
-    font-weight: bold;
-    text-transform: none;
-    color: #B8B8B8;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    line-height: 1.1;
-  }
 }
 
 #social {
   width: 70px;
 
   h3 {
-    font-size: 12px;
-    font-family: "Merriweather Sans", sans-serif;
-    text-transform: uppercase;
-    color: #707070;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    line-height: 1.1;
     float: right;
   }
-}
 
-#social-media-link a {
-  width: 42px;
-  height: 37px;
-  margin-top: 10px;
-  margin-left: 20px;
-  float: right;
-}
-  
-#twitter-icon {
-  background: image-url("footer-twitter.png") no-repeat;
-}
-
-#facebook-icon {
-  background: image-url("footer-facebook.png") no-repeat;
+  img {
+    float: right;
+    padding-top: 10px;
+  }
 }
 
 #copyright {
   padding-top: 20px;
   h3, a {
-    font-family: "Merriweather Sans", sans-serif;
     text-transform: uppercase;
     font-weight: normal;
     color: #505050;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    line-height: 1.1;
-  }
-  h3 {
-    font-size: 12px;
   }
   a {
     font-size: 11px;
     float: right;
   }
-}
 
-#footer-arrow {
-  height: 8px;
-  width: 8px;
-  float: left;
-  margin-top: 7px;
-  background: image-url("footer_arrow.png");
+  img {
+    margin-top: 7px;
+  }
 }
