--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -2,11 +2,10 @@
 
 
 #header {
-  height: 110px;
+  min-height: 110px;
   width: 100%;
   background: #FFFFFF;
   opacity: 1;
-  padding-bottom: 12px;
   z-index: 10;
   position: fixed;
   margin-top: -110px;
@@ -18,28 +17,15 @@
 
 #header-content {
   position: relative;
-}
 
-#header-content #logo {
-  position: absolute; 
-
-  a {
-    width: 75px;
-    height: 75px;
-    background: image-url("logo.png") no-repeat;
-    float: left;
+  img {
     margin-top: 25px;
   }
 }
 
-#header-content nav {
-  margin-top: 12px;
-  height: 110px;
-}
-
 nav ul {
   float: right;
-  margin-top: 37px;
+  margin-top: 53px;
 }
 
 nav ul li {
@@ -59,5 +45,4 @@ nav ul li a {
 nav ul li a:hover, nav ul li a.active {
   border-bottom: 1px solid #535353;
   color: #535353;
-
 }
