adds mouseover text on projects page

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,41 +7,41 @@
     %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
   .row
     #closeoutbike-box.column.five
-      #darken-box
-        = link_to closeoutbikes_case_study_path, :class => "a-case-study-button blanco" do
-          View case study
+      %a#darken-box{:href => closeoutbikes_case_study_path}
+        %h3 CloseoutBike
+        %h4 UI, UX & Branding
       #closeoutbike-result-image
 
     #mobilizeart-box.column.five
-      #darken-box
-        = link_to mobilizeart_case_study_path, :class => "a-case-study-button blanco" do
-          View case study
+      %a#darken-box{:href => mobilizeart_case_study_path}
+        %h3 MobilizeArt
+        %h4 Design & Frontend
       #mobilizeart-result-image
   .row
     #gigdog-box.column.five
-      #darken-box
-        = link_to gigdog_case_study_path, :class => "a-case-study-button blanco" do
-          View case study      
+      %a#darken-box{:href => gigdog_case_study_path}
+        %h3 Gigdog
+        %h4 Design, Frontend & Backend    
       #gigdog-result-image
     #greeneggs-box.column.five
-      #darken-box
-        = link_to greeneggs_case_study_path, :class => "a-case-study-button blanco" do
-          View case study      
+      %a#darken-box{:href => greeneggs_case_study_path}
+        %h3 GreenEggs
+        %h4 Design, Frontend & Backend
       #greeneggs-result-image
   .row
     #textus-box.column.five
-      #darken-box
-        = link_to textus_case_study_path, :class => "a-case-study-button blanco" do
-          View case study
+      %a#darken-box{:href => textus_case_study_path}
+        %h3 TextUs
+        %h4 Backend
       #textus-result-image
     #scheduleshare-box.column.five
-      #darken-box
-        = link_to case_study_path, :class => "a-case-study-button blanco" do
-          View case study      
+      %a#darken-box{:href => case_study_path}
+        %h3 ScheduleShare
+        %h4 Design, Frontend & Backend
       #scheduleshare-result-image 
   .row
     #old-site-box.column.five
-      #darken-box
-        = link_to "http://coshx.github.io", :class => "a-case-study-button blanco", :target => "_blank" do
-          View website
+      %a#darken-box{:href => "http://coshx.github.io", :target => "_blank"}
+        %h3 View our Previous Site
+        %h4 Branding, Design, Frontend, Backend
       #old-site-result-image
