--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -16,6 +16,20 @@
   height: 1560px;
   padding-top: 50px;
 
+  a {
+    display: none;
+    position: relative;
+    z-index: 3;
+  }
+
+  .column.five:hover {
+    a {
+      display: inline-block;
+    }
+  }
+}
+
+#our-work-text {
   h3 {
     margin-top: 0px;
     color: #535353;
@@ -27,19 +41,6 @@
     margin-right: 250px;
     margin-bottom: 30px;
   }
-
-  a {
-    display: none;
-    position: relative;
-    z-index: 3;
-    margin-top: 135px;
-  }
-
-  .column.five:hover {
-    a {
-      display: inline-block;
-    }
-  }
 }
 
 #darken-box {
@@ -49,10 +50,25 @@
   width: 100%;
   height: 300px;
   opacity: 0;
+
+  h3 {
+    padding-top: 100px; 
+    color: #ffffff;
+  }
+
+  h4 {
+    color: #f8f7f5;
+    font-size: 18px;
+  }
 }
 
 #darken-box:hover {
   opacity: 0.7;
+}
+
+#link-div {
+  height: 100%;
+  width: 100%;
 }
 
 #closeoutbike-box {
