--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -60,7 +60,7 @@ h4 {
   font-size: 16px;
   font-family: "Merriweather", serif;
   line-height: 28px;
-  color: $dark-grey;
+  color: $text-grey;
   font-weight: normal;
 }
 
