--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,10 +1,10 @@
-%article#mission-statement
-  %section.row
+#mission-statement
+  .row
     %h1 We take the stress out of web and mobile development.
     %h2 Execution is easy, when you have the right partners.  We’ll handle the technical details so you can focus on what your business needs most.  Let’s build something together.
 
-%article#featured-project.closeoutbike
-  %section.row
+#featured-project.closeoutbike
+  .row
     .column
       = image_tag("closeoutbike_img.png")
     #project-description.column
@@ -13,8 +13,8 @@
       = link_to closeoutbikes_case_study_path, :class => "a-case-study-button closeoutbike" do
         View case study
 
-%article#featured-project.mobilizeart
-  %section.row
+#featured-project.mobilizeart
+  .row
     #project-description.column
       %h3 MobilizeArt
       %h4 Connect your customers with your market, not your website. Technology is a tool that gets out of the way when used right.
@@ -23,8 +23,8 @@
     .column    
       = image_tag("mobilizeart_img.png")
 
-%article#featured-project.gigdog
-  %section.row
+#featured-project.gigdog
+  .row
     .column
       = image_tag("gigdog_img.png")
     #project-description.column
@@ -33,8 +33,8 @@
       = link_to gigdog_case_study_path, :class => "a-case-study-button gigdog" do
         View case study
 
-%article#featured-project.scheduleshare
-  %section.row
+#featured-project.scheduleshare
+  .row
     #project-description.column
       %h3 ScheduleShare
       %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
@@ -43,8 +43,8 @@
     .column
       = image_tag("scheduleshare_img.png")
 
-%article#featured-project.textus
-  %section.row
+#featured-project.textus
+  .row
     .column
       = image_tag("textus_img.png")
     #project-description.column
