css responsive fixes for projects page

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -27,6 +27,7 @@ $mobilizeart-bg: #75c6b2;
 $gigdog-bg: #164d67;
 $scheduleshare-bg: #2c2c2c;
 $textus-bg: #922b8d;
+$greeneggs-bg: #a5c675;
 
 
 @mixin pt-sans {
