--- a/app/views/home/gigdog_case_study.html.haml
+++ b/app/views/home/gigdog_case_study.html.haml
@@ -1,7 +1,7 @@
 %div#tagline.gigdog
 	.row
 		%h3 Music comes home.
-		#project-screen.gigdog
+		= image_tag("gigdog_laptop.png")
 %div#case-study-middle-row
 
 #case-study-steps
