--- a/app/views/home/greeneggs_case_study.html.haml
+++ b/app/views/home/greeneggs_case_study.html.haml
@@ -1,7 +1,7 @@
 %div#tagline.greeneggs
 	.row
 		%h3 Anyone can be cool, but awesome takes practice.
-		#project-screen.greeneggs
+		= image_tag("greeneggs_iphone.png")
 %div#case-study-middle-row
 
 #case-study-steps
