--- a/app/views/home/mobilizeart_case_study.html.haml
+++ b/app/views/home/mobilizeart_case_study.html.haml
@@ -1,7 +1,7 @@
 %div#tagline.mobilizeart
 	.row
 		%h3 Reimagine your relationship with art.
-		#project-screen.mobilizeart
+		= image_tag("mobilizeart_laptop.png")
 %div#case-study-middle-row
 
 #case-study-steps
