--- a/app/views/home/textus_case_study.html.haml
+++ b/app/views/home/textus_case_study.html.haml
@@ -1,7 +1,7 @@
 %div#tagline.textus
 	.row
 		%h3 Text Messaging for Business.
-		#project-screen.textus
+		= image_tag("textus_laptop.png")
 %div#case-study-middle-row
 
 #case-study-steps
