--- a/app/assets/stylesheets/case_study.css.scss
+++ b/app/assets/stylesheets/case_study.css.scss
@@ -2,64 +2,39 @@
 
 
 #tagline {
-	height: 550px;
 	width: 100%;
 	padding-top: 50px;
+	margin-bottom: -121px;
 	text-align: center;
 
 	h3 {
 		color: #FFFFFF;
 	}
+
+	img {
+		margin-top: 50px;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		z-index: 2;
+		position: relative;
+	}	
 }
 
 #tagline.closeoutbikes {
-	background-color: $steel-gray;
+	background-color: $closeoutbike-bg;
 }
 #tagline.textus {
-	background-color: #922b8d;	
+	background-color: $textus-bg;	
 }
 #tagline.mobilizeart {
-	background-color: #75c6b2;
+	background-color: $mobilizeart-bg;
 }
 #tagline.gigdog {
-	background-color: #164d67;
+	background-color: $gigdog-bg;
 }
-
 #tagline.greeneggs {
-	background-color: #a5c675;
-}
-
-#project-screen {
-	margin-top: 50px;
-	height: 518px;
-	width: 890px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	z-index: 2;
-	position: relative;
-}
-
-#project-screen.closeoutbikes {
-	background: image-url("closeoutbike_laptop.png") no-repeat;
-}
-
-#project-screen.textus {
-	background: image-url("textus_laptop.png") no-repeat;
-}
-
-#project-screen.mobilizeart {
-	background: image-url("mobilizeart_laptop.png") no-repeat;
-}
-
-#project-screen.gigdog {
-	background: image-url("gigdog_laptop.png") no-repeat;
-}
-
-#project-screen.greeneggs {
-	background: image-url("greeneggs_iphone.png") no-repeat;
-	width: 834px;
-	height: 562px;
+	background-color: $greeneggs-bg;
 }
 
 #case-study-middle-row {
@@ -72,118 +47,20 @@
 
 #case-study-steps {
   padding-top: 70px;
-  height: 100%;
   padding-bottom: 50px;
   border-bottom: 1px solid #e9e9e9;
 
   .row {
-  	width: 833px;
+  	max-width: 833px;
   	margin-left: auto;
   	margin-right: auto;
   }
 
   h3 {
     margin-top: 0px;
-    color: #535353;
   }
   h4 {
     margin-top: 20px;
-    color: $text-grey;
     margin-bottom: 50px;
   }
-}
-
-#logo-versions {
-	background-color: #FFFFFF;
-	height: 850px;
-	padding-top: 50px;
-	text-align: center;
-	border-bottom: 1px solid #e9e9e9;
-
-
-	h3 {
-		color: black;
-	}
-
-	h4 {
-		margin-left: 200px;
-		margin-right: 200px;
-		color: $text-grey;
-	}
-}
-
-#selectors {
-	background: image-url("selectors.png") no-repeat;
-	margin-top: 50px;
-	height: 42px;
-	width: 843px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#logo-options {
-	background: image-url("closeoutbike_logos.png") no-repeat;
-	margin-top: 20px;
-	height: 137px;
-	width: 1033px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-
-}
-
-#arrow-down {
-	background: image-url("arrow-down.png") no-repeat;
-	margin-top: 40px;
-	height: 56px;
-	width: 40px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#selected-logo {
-	background: image-url("closeoutbike_selected_logo.png") no-repeat;
-	margin-top: 60px;
-	height: 220px;
-	width: 440px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#project-design {
-	background-color: #FFFFFF;
-	height: 1180px;
-	padding-top: 50px;
-	text-align: center;
-	border-bottom: 1px solid #e9e9e9;
-
-
-	h3 {
-		color: black;
-	}
-
-	h4 {
-		margin-left: 200px;
-		margin-right: 200px;
-		color: $text-grey;
-	}
-}
-
-#design-image {
-	background: image-url("closeoutbike_design.png") no-repeat;
-	margin-top: 50px;
-	height: 700px;
-	width: 800px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 40px;
-
-	border-radius: 13px;
-	-moz-box-shadow: 0 0 30px #888;
-	-webkit-box-shadow: 0 0 30px #888;
-	box-shadow: 0 0 30px #DDD;
 }
