--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,7 +1,7 @@
 #results-header
   .row
     %h1 Simple is better than complex.
-%div#recent-work
+#recent-work
   #our-work-text.row
     %h3 Recent Work
     %h4 We have a solid track record of delivering great results - on time and on budget. Here are just a few of our recent wins.
@@ -10,38 +10,38 @@
       %a#darken-box{:href => closeoutbikes_case_study_path}
         %h3 CloseoutBike
         %h4 UI, UX & Branding
-      #closeoutbike-result-image
+      = image_tag("closeoutbikes_result.png")
 
     #mobilizeart-box.column.five
       %a#darken-box{:href => mobilizeart_case_study_path}
         %h3 MobilizeArt
         %h4 Design & Frontend
-      #mobilizeart-result-image
+      = image_tag("mobilizeart_result.png")
   .row
     #gigdog-box.column.five
       %a#darken-box{:href => gigdog_case_study_path}
         %h3 Gigdog
         %h4 Design, Frontend & Backend    
-      #gigdog-result-image
+      = image_tag("gigdog_result.png")
     #greeneggs-box.column.five
       %a#darken-box{:href => greeneggs_case_study_path}
         %h3 GreenEggs
         %h4 Design, Frontend & Backend
-      #greeneggs-result-image
+      = image_tag("greeneggs_result.png")
   .row
     #textus-box.column.five
       %a#darken-box{:href => textus_case_study_path}
         %h3 TextUs
         %h4 Backend
-      #textus-result-image
+      = image_tag("textus_result.png")
     #scheduleshare-box.column.five
       %a#darken-box{:href => case_study_path}
         %h3 ScheduleShare
         %h4 Design, Frontend & Backend
-      #scheduleshare-result-image 
+      = image_tag("scheduleshare_result.png")
   .row
-    #old-site-box.column.five
+    #old-site-box.column.ten
       %a#darken-box{:href => "http://coshx.github.io", :target => "_blank"}
         %h3 View our Previous Site
         %h4 Branding, Design, Frontend, Backend
-      #old-site-result-image
+      = image_tag("old_site_result.png", :class => "website")
