--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -40,3 +40,12 @@ body {
     margin-right: 200px;
   }
 }
+
+#error-text {
+  h1 {
+    font-size: 200px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+}
