--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -2,7 +2,8 @@
   %h1.errorTitle
     %code.errorCode 404
     \- Page Not Found
-  %h2.errorDescription
-    Uh-Oh! The page you were looking for doesn't exist.
+  #error-text
+  	%h1 Ooops!
+  	%h2	Sorry, the page you were looking for doesn't exist.
   %p
     You may have mistyped the address or the page may have moved.
