--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -1,9 +1,4 @@
 .dialog
-  %h1.errorTitle
-    %code.errorCode 404
-    \- Page Not Found
-  #error-text
-  	%h1 Ooops!
-  	%h2	Sorry, the page you were looking for doesn't exist.
-  %p
-    You may have mistyped the address or the page may have moved.
+	#error-text
+		%h1 Ooops!
+		%h2 Sorry, the page you're looking for doesn't exist.
