adds scheduleshare and closeoutbike copy

--- a/app/assets/stylesheets/case_study.css.scss
+++ b/app/assets/stylesheets/case_study.css.scss
@@ -36,6 +36,9 @@
 #tagline.greeneggs {
 	background-color: $greeneggs-bg;
 }
+#tagline.scheduleshare {
+	background-color: $scheduleshare-bg;
+}
 
 #case-study-middle-row {
 	height: 210px;
