--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -35,7 +35,7 @@
         %h4 Backend
       = image_tag("textus_result.png")
     #scheduleshare-box.column.five
-      %a#darken-box{:href => case_study_path}
+      %a#darken-box{:href => scheduleshare_case_study_path}
         %h3 ScheduleShare
         %h4 Design, Frontend & Backend
       = image_tag("scheduleshare_result.png")
