updates to editing projects

--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -2,6 +2,7 @@
 
 = render 'form'
 
-= link_to 'Show', @project
-\|
-= link_to 'Back', projects_path
+.row
+	= link_to 'Show', @project
+	\|
+	= link_to 'Back', projects_path
