--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -5,25 +5,48 @@
       %ul
         - @project.errors.full_messages.each do |msg|
           %li= msg
-
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :url
-    = f.text_field :url
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :featured
-    = f.check_box :featured
-  .images
-    = image_tag(@project.picture_url) if @project.picture?
-    = f.file_field :picture
-    Remove picture
-    = f.check_box :remove_picture
-  .actions
-    = f.submit 'Save'
-
-= render :partial => 'quotes/list', :locals => {:project => @project}
+  .row
+    .field
+      = f.label :title
+      = f.text_field :title
+    .field
+      = f.label :tagline
+      = f.text_field :tagline
+    .field
+      = f.label :url
+      = f.text_field :url
+    .field
+      = f.label :background_color
+      = f.text_field :background_color
+    .field
+      = f.label :product_description
+      = f.text_area :product_description
+    .field
+      = f.label :project_description
+      = f.text_area :project_description
+    .field
+      = f.label :result_description
+      = f.text_area :result_description
+    .field
+      = f.label :featured
+      = f.check_box :featured
+  .row{:style => "padding-top: 50px"}
+    .images
+      %h3 Main picture for show page:
+      = image_tag(@project.picture_url) if @project.picture?
+      %br/
+      = f.file_field :picture
+      Remove picture
+      = f.check_box :remove_picture
+  .row{:style => "padding-top: 50px"}
+    .images
+      %h3 Featured image for home page:
+      = image_tag(@project.featured_picture_url) if @project.featured_picture?
+      %br/
+      = f.file_field :featured_picture
+      Remove picture
+      = f.check_box :remove_picture
+  .row{:style => "padding-top: 50px"}
+    %h3 Save Project:
+    .actions
+      = f.submit 'Save Project'
